--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,9 @@
     </head>
 
     <body>
-        hallo dezigners
+        <div class="header">
+            
+        </div>
     <script src="app.js"></script>
     </body>
 </html>
