--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,21 @@
     </head>
 
     <body>
-        <div class="header">
-            
+        <div class="header"></div>
+        <div class="team">
+            <h2 class="team__title">Team</h2>
+            <div class="team-member">
+                <h3 class="team-member__text"><span class="bigger">IR</span>ene Prins</h3>
+            </div>
+            <div class="team-member">
+                <h3 class="team-member__text"><span class="bigger">JA</span>sper Vriends</h3>
+            </div>
+            <div class="team-member">
+                <h3 class="team-member__text"><span class="bigger">ZO</span>ë de Waard</h3>
+            </div>
+            <div class="team-member">
+                <h3 class="team-member__text"><span class="bigger">CH</span>arissa van Werkhooven</h3>
+            </div>
         </div>
     <script src="app.js"></script>
     </body>
