Worked on webppack file loader, header and added container

--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,18 @@
               content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Onepager </title>
+        <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;500&display=swap" rel="stylesheet">
     </head>
 
     <body>
-        <div class="header"></div>
+        <header>
+            <div class="container">
+                <h1>IRJAZOCH</h1>
+                <p>Hoe kunnen we de restaurantervaring voor blinden en slechtziende verbeteren.</p>
+
+                <button></button>
+            </div>
+        </header>
         <div class="team">
             <h2 class="team__title">Team</h2>
             <div class="team-member">
