--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport"
               content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Oswald:300,400,600,700&amp;lang=en" />
         <title>Onepager </title>
         <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;500&display=swap" rel="stylesheet">
     </head>
@@ -18,21 +19,58 @@
                 <button></button>
             </div>
         </header>
-        <div class="team">
-            <h2 class="team__title">Team</h2>
-            <div class="team-member">
-                <h3 class="team-member__text"><span class="bigger">IR</span>ene Prins</h3>
-            </div>
-            <div class="team-member">
-                <h3 class="team-member__text"><span class="bigger">JA</span>sper Vriends</h3>
-            </div>
-            <div class="team-member">
-                <h3 class="team-member__text"><span class="bigger">ZO</span>ë de Waard</h3>
-            </div>
-            <div class="team-member">
-                <h3 class="team-member__text"><span class="bigger">CH</span>arissa van Werkhooven</h3>
+        <div class="container">
+            <div class="team">
+                <h2 class="team__title">Team</h2>
+                <div class="team-member">
+                    <h3 class="team-member__text"><span class="bigger">IR</span>ene Prins</h3>
+                </div>
+                <div class="team-member">
+                    <h3 class="team-member__text"><span class="bigger">JA</span>sper Vriends</h3>
+                </div>
+                <div class="team-member">
+                    <h3 class="team-member__text"><span class="bigger">ZO</span>ë de Waard</h3>
+                </div>
+                <div class="team-member">
+                    <h3 class="team-member__text"><span class="bigger">CH</span>arissa van Werkhooven</h3>
+                </div>
             </div>
         </div>
+
+        <div class="container">
+            <div class="concept">
+                <h2>Concept</h2>
+                <div class="ontwerpcriteria">
+                    <h3 class="title title--green">Ontwerpcriteria</h3>
+                    <div class="ontwerpcriteria__item">
+                        <div class="ontwerpcriteria__number">1.</div>
+                        <div class="ontwerpcriteria__text">blah</div>
+                    </div>
+                    <div class="ontwerpcriteria__item">
+                        <div class="ontwerpcriteria__number">2.</div>
+                        <div class="ontwerpcriteria__text">blah</div>
+                    </div>
+                    <div class="ontwerpcriteria__item">
+                        <div class="ontwerpcriteria__number">3.</div>
+                        <div class="ontwerpcriteria__text">blah</div>
+                    </div>
+                    <div class="ontwerpcriteria__item">
+                        <div class="ontwerpcriteria__number">4.</div>
+                        <div class="ontwerpcriteria__text">blah</div>
+                    </div>
+                </div>
+                <div class="brainstorm">
+                    <h3 class="title title--purple">Brainstorm</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus maximus massa nec felis consectetur, vitae tincidunt augue volutpat. Proin dictum rutrum est, quis finibus est bibendum pretium. Integer enim sem, porta ut sem a, suscipit dignissim sem. Nullam elementum justo eget libero blandit hendrerit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Integer varius leo in ex feugiat, id porta sapien facilisis. Vivamus vitae nunc aliquet, congue nisl et, congue odio. Donec at odio nibh. Suspendisse eu vulputate dolor. Phasellus aliquam, massa vitae condimentum fermentum, nunc est molestie eros, a blandit turpis ex ac turpis. Quisque fermentum quis tellus quis mollis. Nulla vel tempor lorem. Sed quis hendrerit metus, sit amet tincidunt lacus. Vestibulum egestas odio eu lobortis malesuada. Morbi turpis enim, auctor in erat et, lobortis sodales dui.</p>
+                </div>
+
+                <div class="concepten">
+                    <h3 class="title title--red">Concepten</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus maximus massa nec felis consectetur, vitae tincidunt augue volutpat. Proin dictum rutrum est, quis finibus est bibendum pretium. Integer enim sem, porta ut sem a, suscipit dignissim sem. Nullam elementum justo eget libero blandit hendrerit. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Integer varius leo in ex feugiat, id porta sapien facilisis. Vivamus vitae nunc aliquet, congue nisl et, congue odio. Donec at odio nibh. Suspendisse eu vulputate dolor. Phasellus aliquam, massa vitae condimentum fermentum, nunc est molestie eros, a blandit turpis ex ac turpis. Quisque fermentum quis tellus quis mollis. Nulla vel tempor lorem. Sed quis hendrerit metus, sit amet tincidunt lacus. Vestibulum egestas odio eu lobortis malesuada. Morbi turpis enim, auctor in erat et, lobortis sodales dui.</p>
+                </div>
+            </div>
+        </div>
+        
     <script src="app.js"></script>
     </body>
 </html>
