Added connect component

--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,19 @@
             </div>
         </div>
 
+        <div class="connect-component">
+            <div class="container">
+                <h3 class="title title--green">Het deskresearch</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc in tincidunt tellus, sodales sagittis massa. Morbi dictum dignissim quam, nec vehicula eros faucibus cursus. Sed condimentum leo vitae metus vehicula, quis semper nisi fringilla. Pellentesque vel feugiat lorem, vel laoreet erat. Cras velit eros, dictum ac elit in, aliquam bibendum risus. In hac habitasse platea dictumst. Aenean hendrerit sodales lorem, eget tincidunt ligula laoreet eu. Morbi porttitor orci ac tincidunt viverra.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc in tincidunt tellus, sodales sagittis massa. Morbi dictum dignissim quam, nec vehicula eros faucibus cursus. Sed condimentum leo vitae metus vehicula, quis semper nisi fringilla. Pellentesque vel feugiat lorem, vel laoreet erat. Cras velit eros, dictum ac elit in, aliquam bibendum risus. In hac habitasse platea dictumst. Aenean hendrerit sodales lorem, eget tincidunt ligula laoreet eu. Morbi porttitor orci ac tincidunt viverra.</p>
+                
+                <h3 class="title title--purple">Het doelgroep onderzoek</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc in tincidunt tellus, sodales sagittis massa. Morbi dictum dignissim quam, nec vehicula eros faucibus cursus. Sed condimentum leo vitae metus vehicula, quis semper nisi fringilla. Pellentesque vel feugiat lorem, vel laoreet erat. Cras velit eros, dictum ac elit in, aliquam bibendum risus. In hac habitasse platea dictumst. Aenean hendrerit sodales lorem, eget tincidunt ligula laoreet eu. Morbi porttitor orci ac tincidunt viverra.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc in tincidunt tellus, sodales sagittis massa. Morbi dictum dignissim quam, nec vehicula eros faucibus cursus. Sed condimentum leo vitae metus vehicula, quis semper nisi fringilla. Pellentesque vel feugiat lorem, vel laoreet erat. Cras velit eros, dictum ac elit in, aliquam bibendum risus. In hac habitasse platea dictumst. Aenean hendrerit sodales lorem, eget tincidunt ligula laoreet eu. Morbi porttitor orci ac tincidunt viverra.</p>
+
+            </div>
+        </div>
+
         <div class="container">
             <div class="concept">
                 <h2>Concept</h2>
@@ -70,7 +83,5 @@
                 </div>
             </div>
         </div>
-        
-    <script src="app.js"></script>
     </body>
 </html>
